# EEG-WM-JEPA

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
configs/: default.yaml
docs/: data_pipeline.md  history.md  hyperparameter_design.md  issues.md  research_method.md  todo.md
paper/: main.md
scripts/: convert_parquet_to_mds.py  eval_bci.py  preprocess_aggressive.py  preprocess_parallel.py  preprocess_pipeline.py  preprocess_reve.py
src/evaluation/: bci_dataset.py  downstream.py
src/model/: channel_mixer.py  eeg_jepa.py  lewm_modules.py  masking.py  patch_embedder.py
src/preprocessing/: dataset.py  mds_dataset.py  reve_loader.py  standardize.py  streaming_dataset.py
tests/: test_forward_pass.py
